--- a/Students/MainWindow.xaml
+++ b/Students/MainWindow.xaml
@@ -3,10 +3,237 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Students"
+        xmlns:local="clr-namespace:Students.Model"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="650" Width="1170">
+    <Window.Resources>
+        <Style x:Key="MyFocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Control}">
+                        <Grid Margin="3 2">
+                            <Rectangle Name="r1" StrokeThickness="1" Stroke="Black" StrokeDashArray="2 2"/>
+                            <Border Name="border" Width="{TemplateBinding ActualWidth}" Height="{TemplateBinding ActualHeight}"  CornerRadius="2" BorderThickness="1" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="ShadowStyle">
+            <Setter Property="Control.Foreground" Value="LightGray" />
+        </Style>
+        <Style x:Key="InformButton" TargetType="Button">
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Margin" Value="2"/>
+            <Setter Property="FontFamily" Value="Verdana"/>
+            <Setter Property="FontSize" Value="11px"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FocusVisualStyle" Value="{StaticResource MyFocusVisual}" />
+            <Setter Property="Background" >
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" >
+                        <GradientStop Color="#FFFFD190" Offset="0.2"/>
+                        <GradientStop Color="Orange" Offset="0.85"/>
+                        <GradientStop Color="#FFFFD190" Offset="1"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="border" 
+        				BorderThickness="1"
+        				Padding="4,2" 
+        				BorderBrush="DarkGray" 
+        				CornerRadius="3" 
+        				Background="{TemplateBinding Background}">
+                            <Grid >
+                                <ContentPresenter HorizontalAlignment="Center" 
+        	                           VerticalAlignment="Center" Name="contentShadow" 
+        					Style="{StaticResource ShadowStyle}">
+                                    <ContentPresenter.RenderTransform>
+                                        <TranslateTransform X="1.0" Y="1.0" />
+                                    </ContentPresenter.RenderTransform>
+                                </ContentPresenter>
+                                <ContentPresenter HorizontalAlignment="Center" 
+                                    VerticalAlignment="Center" Name="content"/>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF4788c8" />
+                                <Setter Property="Foreground" Value="#FF4788c8" />
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="Background" >
+                                    <Setter.Value>
+                                        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" >
+                                            <GradientStop Color="#FFFFD190" Offset="0.35"/>
+                                            <GradientStop Color="Orange" Offset="0.95"/>
+                                            <GradientStop Color="#FFFFD190" Offset="1"/>
+                                        </LinearGradientBrush>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter TargetName="content" Property="RenderTransform" >
+                                    <Setter.Value>
+                                        <TranslateTransform Y="1.0" />
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                            <Trigger Property="IsDefaulted" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF282828" />
+                            </Trigger>
+                            <Trigger Property="IsFocused" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="#FF282828" />
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="border" Property="Opacity" Value="0.7" />
+                                <Setter Property="Foreground" Value="Gray" />
+                            </Trigger>
+
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="14" />
+        </Style>
+        <Style TargetType="RadioButton">
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="Margin" Value="10,0,0,0" />
+        </Style>
+        <Style TargetType="ListBox" x:Key="ListStyle" BasedOn="{StaticResource {x:Type ListBox}}">
+            <Style.Triggers>
+                <DataTrigger 
+            Binding="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=Items.Count}"  Value="0">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <TextBlock FontSize="20">Студентов нет</TextBlock>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Menu>
+                <MenuItem Header="Файл">
+                    <MenuItem Header="Открыть" Command="{Binding OpenCommand}" />
+                    <MenuItem Header="Сохранить" Command="{Binding SaveCommand}" />
+                </MenuItem>
+            </Menu>
+        </Grid>
+        <Grid Grid.Row="1" Margin="10,5,10,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150" />
+                <ColumnDefinition Width="150" />
+                <ColumnDefinition Width="150" />
+            </Grid.ColumnDefinitions>
+            <Button Name="CreateStudent" Grid.Column="0" Style="{StaticResource InformButton}" Click="CreateStudent_Click">Добавить</Button>
+            <Button Name="UpdateStudent" Grid.Column="1" Style="{StaticResource InformButton}">Изменить</Button>
+            <Button Name="DeleteStudent" Grid.Column="2" Style="{StaticResource InformButton}">Удалить</Button>
+
+        </Grid>
+        <Grid Grid.Row="2" Margin="10,5,10,50">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="0.8*" />
+            </Grid.ColumnDefinitions>
+
+            <ListBox Style="{StaticResource ListStyle}" SelectionMode="Multiple" Grid.Column="0" ItemsSource="{Binding Phones}"
+                 SelectedItem="{Binding SelectedPhone}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel x:Name="BackgroundGrid" Margin="5">
+                            <TextBlock FontSize="18" Text="{Binding Path=Title}" />
+                            <TextBlock Text="{Binding Path=Company}" />
+                            <TextBlock Text="{Binding Path=Price}" />
+                        </StackPanel>
+                        <DataTemplate.Triggers>
+                            <DataTrigger Binding="{Binding IsOccupied}" Value="True">
+                                <Setter TargetName="BackgroundGrid" Property="Background" Value="Red"/>
+                            </DataTrigger>
+
+                            <DataTrigger Binding="{Binding IsOccupied}" Value="False">
+                                <Setter TargetName="BackgroundGrid" Property="Background" Value="Green"/>
+                            </DataTrigger>
+                        </DataTemplate.Triggers>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+                <ListBoxItem>
+                <StackPanel Margin="5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.1*" />
+                                <ColumnDefinition Width="0.1*" />
+                                <ColumnDefinition Width="0.1*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock MinWidth="200" MaxWidth="500" Grid.Column="0" Text="2" />
+                            <TextBlock MinWidth="200" MaxWidth="500" Grid.Column="1" Text="22" />
+                            <TextBlock MinWidth="200" Grid.Column="2" Text="222" />
+                        </Grid>
+                    </StackPanel>
+                </ListBoxItem>
+                <ListBoxItem>
+                    <StackPanel Margin="5">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="0.1*" />
+                                <ColumnDefinition Width="0.1*" />
+                                <ColumnDefinition Width="0.1*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock MinWidth="200" MaxWidth="500" Grid.Column="0" Text="sdfsdfsdf" />
+                            <TextBlock MinWidth="200" MaxWidth="500" Grid.Column="1" Text="sdfsdf" />
+                            <TextBlock MinWidth="200" Grid.Column="2" Text="sdfdsfsdfsdf" />
+                        </Grid>
+                    </StackPanel>
+                </ListBoxItem>
+            </ListBox>
+
+            <StackPanel Name="FormStudent" Visibility="Hidden" Margin="10,0,0,0" Grid.Column="1" DataContext="{Binding SelectedPhone}">
+                <TextBlock Text="Добавить студента"  />
+                <TextBlock Text="Имя" />
+                <TextBox Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Фамилия" />
+                <TextBox Text="{Binding Company, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock Text="Возраст" />
+                <TextBox Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Grid Margin="0,5,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="0.1*" />
+                        <ColumnDefinition Width="0.5*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Text="Пол" />
+                    <StackPanel  Grid.Column="1" Orientation="Horizontal">
+                        <RadioButton x:Name="MaleButton" Content="Мужской" IsChecked="{Binding Path=Gender}" />
+                        <RadioButton x:Name="FemaleButton" Content="Женский" IsChecked="{Binding Path=Gender}"/>
+                    </StackPanel>
+                </Grid>
+                <Grid Grid.Row="1" Margin="0,5,10,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100" />
+                        <ColumnDefinition Width="100" />
+                    </Grid.ColumnDefinitions>
+                    <Button Name="SaveStudent" Height="30" Grid.Column="0" Style="{StaticResource InformButton}" Click="SaveStudent_Click">Сохранить</Button>
+                    <Button Name="CancelStudent" Height="30" Grid.Column="1" Style="{StaticResource InformButton}" Click="CancelStudent_Click">Отменить</Button>
+
+                </Grid>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
